# DiffRGD

./: .gitignore  README.md  generate_dataset.py  pyproject.toml  run_control.py  run_inverse_problem.py  run_sd_style_transfer.py
configs/: prompts.json
configs/operators/: box_inpainting.yaml  denoising.yaml  gaussian_blur.yaml  motion_blur.yaml  random_inpainting.yaml  super_resolution.yaml
evaluation/: evaluate_control.py  evaluate_restoration.py  evaluate_sd_style_transfer.py  evaluate_sd_super_resolution.py
scripts/: convert_openai_model_to_diffuser.py  download_celeba_hq_dataset.py  download_face_id.sh  download_ffhq.py  download_imagenet_val_data.sh  download_model_checkpoint.sh  generate_dataset.sh  plot_chi.py  plot_gradient_norm.py  run_control.sh  run_denoising.sh  run_eval_control.sh  run_eval_ffhq.sh  run_eval_imagenet.sh  run_ffhq_t100.sh  run_ffhq_t1000.sh  run_imagenet_t100.sh  run_sd_style_transfer.sh  run_sd_super_resolution.sh  split_ffhq_valid.py
src/: constants.py  dataset.py  model.py  noise.py  operators.py  utils.py
src/losses/: face_id_loss.py  face_seg_loss.py  face_sketch_loss.py  linear_inverse_problem.py  style_loss.py
src/losses/models/: bisenet.py  resnet.py  sketchnet.py
src/methods/: admmdiff.py  diffrgd.py  dps.py  dsg.py  mpgd.py
src/metrics/: __init__.py  clip_aes.py  iou.py  psnr.py  ssim.py
src/pipelines/: pipeline_image_sampler.py  pipeline_sd_image_sampler.py  utils.py
